# ai-coding-agent

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/slack_gateway/: Dockerfile  pyproject.toml
apps/slack_gateway/src/slack_gateway/: __init__.py  config.py  main.py  slack_app.py  temporal_client.py
apps/temporal_worker/: Dockerfile  pyproject.toml
apps/temporal_worker/src/temporal_worker/: __init__.py  activities.py  config.py  main.py  workflows.py
apps/temporal_worker/src/temporal_worker/agent/: __init__.py  coding_agent.py  tools.py
apps/temporal_worker/src/temporal_worker/github_integration/: __init__.py  _git.py  base.py  factory.py  mock.py  real.py
apps/temporal_worker/src/temporal_worker/workspace/: __init__.py  manager.py
docs/: architecture.md
helm/platform/: Chart.yaml  values.dev.yaml  values.eks.yaml  values.yaml
helm/slack-gateway/: Chart.yaml  values.yaml
helm/slack-gateway/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/temporal-worker/: Chart.yaml  values.yaml
helm/temporal-worker/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  secret.yaml  serviceaccount.yaml
scripts/: bootstrap.sh  build_images.sh  cleanup.sh  deploy.sh
terraform/: README.md
terraform/envs/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/ecr/: main.tf
terraform/modules/secrets/: main.tf
