[project]
name = "slack-gateway"
version = "0.1.0"
description = "Slack-facing HTTP gateway that starts/signals coding agent workflows."
requires-python = ">=3.11"
dependencies = [
  "coding-agent-shared",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2",
  "aiohttp>=3.9",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "slack-bolt>=1.18",
  "slack-sdk>=3.27",
  "temporalio>=1.7,<2",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[project.scripts]
slack-gateway = "slack_gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_gateway"]

[tool.uv.sources]
coding-agent-shared = { workspace = true }
