[project]
name = "temporal-worker"
version = "0.1.0"
description = "Pydantic AI coding agent running inside Temporal workflows."
requires-python = ">=3.11"
dependencies = [
  "coding-agent-shared",
  "pydantic>=2.7,<3",
  "pydantic-ai>=0.0.13",
  "pydantic-settings>=2.2",
  "temporalio>=1.7,<2",
  "httpx>=0.27",
  "slack-sdk>=3.27",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
temporal-worker = "temporal_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_worker"]

[tool.uv.sources]
coding-agent-shared = { workspace = true }
